@@ -20,6 +20,10 @@ Version 0.7.1 UNRELASED
 
   * aptitude_resolver.cc: use std::unique_ptr instead of deprecated SPtrArray
 
+  * Add compatibility for APT 1.1:
+
+    * Create DepIterator values from Dependency pointers on-the-fly, where required
+
   * Improving C++11 compatibilty mode:
 
     * Convert std::auto_ptr (deprecated in C++11) to unique_ptr
